--- a/_config.yml
+++ b/_config.yml
@@ -22,12 +22,26 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ico_vn
 github_username:  icovn
+google_analytics: UA-53825430-2
 
 # Build settings
 markdown: kramdown
+kramdown:
+  input: GFM
+#  parse_block_html: true
+#markdown: redcarpet
+#redcarpet:
+#  extensions: ["tables", "fenced_code_blocks"]
 theme: minima
 gems:
+  - jekyll-archives
   - jekyll-feed
+  - jekyll-sitemap
+  - jemoji
 exclude:
   - Gemfile
   - Gemfile.lock
+
+# Plugin
+tag_page_layout: tag_page
+tag_page_dir: tag
